-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.3.1, 5.4.0
-
None
-
b0835b31fd456c30ea3fcaae6edc58212556477d
The attached testcase crashes (either due to an assert, or for real) inside QtQml when run with qmlscene.
- replaces
-
QTBUG-40516 Crash in property binding when constructing objects
-
- Closed
-
| For Gerrit Dashboard: QTBUG-40018 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 92847,3 | Fix crash with early QObject property access | 5.3 | qt/qtdeclarative | Status: MERGED | -2 | 0 |